<resources>
    <string name="app_name">PetagramRCENodejs</string>
    <string name="nombre">Mascota 06</string>
    <string name="nlikes">0</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_acerca">Acerca De</string>
    <string name="menu_contacto">Contactarnos</string>
    <string name="menu_blikes">Borrar Likes de mascotas</string>
    <string name="menu_timeline">Visualizar TimeLine</string>
    <string name="menu_usuario">Definir usuario de Instagram</string>
    <string name="ayuda_nombre">nombre del remitente</string>
    <string name="ayuda_nombre_usuario">Escribe usuario de instagram</string>
    <string name="nombre_inicial">Ricardo Cossich</string>
    <string name="ayuda_remitente">email del remitente</string>
    <string name="remitente_original">rce.coursera@gmail.com</string>
    <string name="ayuda_correo">email del destinatario</string>
    <string name="destinatario_original">ricardo.cossich@gmail.com</string>
    <string name="ayuda_contenido">Ingrese texto del correo</string>
    <string name="contenido_original">Testo de prueba desde Android Studio</string>
    <string name="contenido_boton1">Enviar Comentario</string>
    <string name="ayuda_biografia">Breve reseña del desarrollador</string>
    <string name="contenido_boton2">Enterado</string>
    <string name="contenido_boton3">Guardar cuenta y actualizar pantalla inicial</string>
    <string name="plikes">0</string>
    <string name="Instagram">cuenta_instagram</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_token">Obtener TokenID</string>
    <string name="menu_notificaciones">Recibir Notificaciones</string>
    <string name="contenido_boton4">Guarda cuenta y actualiza Time Line</string>
    <string name="menu_usuarioTL">Definir usuario para TimeLine</string>

    <string name="opcion1_notificacion">Ver mi perfil</string>
    <string name="opcion2_notificacion">Seguir en Instagram</string>
    <string name="opcion3_notificacion">Ver perfil usuario</string>

</resources>

