<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rcossich.petagramrcenodejs.EnviarCorreo">
    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar"
        >
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/miActionBar"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ayuda_nombre"/>

        <EditText
            android:id="@+id/etEmailr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ayuda_remitente"/>
        <EditText
            android:id="@+id/etEmaild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etNombre"
            android:hint="@string/ayuda_correo"/>

        <EditText
            android:id="@+id/etContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="9"
            android:layout_below="@id/etEmaild"
            android:hint="@string/ayuda_contenido" />
        <Button
            android:id="@+id/btEnvio"
            android:layout_marginTop="@dimen/separa_boton"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="enviar"
            android:layout_below="@id/etContenido"
            android:text="@string/contenido_boton1"/>
    </LinearLayout>

</RelativeLayout>
